2010-06-28 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Centralized handling of exceptions raised from Main
	and separate Task thread because some exceptions handled only in Main
	thread were not caught (fix btw trac ticket #93).

2010-06-17 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 6 released.

2010-06-16 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Check for trailing args when using -c/--copy (trac
	ticket #88).

	* NodeSet.py, NodeUtils.py: Add a way to retrieve all nodes when "all"
	external call is missing but "map" and "list" calls are specified (trac
	ticket #90).

	* Task.py: Add handling of stderr during task.copy().

	* Worker/Ssh.py: Add handling of stderr (when needed) during scp.

	* scripts/clush.py: Fix display issue with clush --copy when some nodes
	are not reachable.

	* Version 1.3 beta 5 released.

2010-06-15 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Add --color={never,always,auto} command line option
	and color: {never,always,auto} config option (trac ticket #68), defaulting
	to `never'. Also did some code refactoring/lightening (created a Display
	class). Updated clush and clush.conf man pages.

2010-06-09 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Automatically increase open files soft limit (trac
	ticket #61). Handle "Too many open files" exception.

	* Task.py: Add excepthook and default_excepthook methods to handle
	uncaught exception in a Task thread. Make it compliant with sys.excepthook
	also.

2010-06-08 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 4 released.

	* doc/extras/vim/syntax/groupsconf.vim: Improved vim syntax file for
	groups.conf (trac ticket #85): now $GROUP and $NODE are keywords.

	* scripts/clush.py: Do not wait the end of all commands when using -bL
	switches when possible (trac ticket #69).

	* MsgTree.py: Added remove(match) method to remove entry from the tree.

	* Task.py: Added flush_buffers() and flush_errors() methods.
