@@ -1,3 +1,8 @@
+2010-06-29 H. Doreau <henri.doreau@gmail.com>
+	* Worker/Pdsh.py: removed obsolete _read() and _readerr() methods that
+	overrode EngineClient methods without raising an EOFException when
+	read() reads nothing (trac ticket #97).
+
 2010-06-28 S. Thiell <stephane.thiell@cea.fr>
 
 	* scripts/clush.py: Centralized handling of exceptions raised from Main
